--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   },
   "homepage": "https://github.com/freeCodeCamp/boilerplate-npm#readme",
   "version": "1.0.0",
-  "keywords": [],
+  "keywords": [ "freecodecamp", "microservice", "guide" ],
   "author": "Robin",
   "license": "ISC"
 }
